--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,8 +1,7 @@
-<html>
-    <head>
-        <title>Hello, world!</title>
-    </head>
-    <body>
-        !dlrow ,olleH
-    </body>
-</html>
+{% extends navbar.html %}
+{% block head %}
+<title>Hello, world!</title>
+{% endblock %}
+{% block content %}
+!dlrow ,olleH
+{% endblock %}
