--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -1,11 +1,11 @@
-{% extends base.html %}
+{% extends "base.html" %}
 {% block navbar %}
 <nav class="uk-navbar">
-	<a class="uk-navbar-toggle" href="#sidebar" data-uk-offcanvas></a>
+	<a class="uk-navbar-toggle" href="#sidebar" data-uk-offcanvas=""></a>
 </nav>
 <div id="sidebar" class="uk-offcanvas">
 	<div class="uk-offcanvas-bar">
-		<ul class="uk-nav uk-nav-offcanvas" data-uk-nav>
+		<ul class="uk-nav uk-nav-offcanvas" data-uk-nav="">
 			<li class="uk-active">Home</li>
 			<li>Potato</li>
 		</ul>
