--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="/static/uikit.min.js"></script>
-		<link rel="stylesheet" href="/static/uikit.min.css">
+		<script src="/static/js/uikit.min.js"></script>
+		<link rel="stylesheet" href="/static/css/uikit.min.css">
 		{% block head %}
 			<title>Base template - do not use</title>
 		{% endblock %}
