make off-canvas work

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script src="//static.csssuf.net/jquery.js"></script>
 		<script src="/static/js/uikit.min.js"></script>
 		<link rel="stylesheet" href="/static/css/uikit.min.css">
 		{% block head %}
