--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block navbar %}
-<nav class="uk-navbar">
-	<a class="uk-navbar-toggle" href="#sidebar" data-uk-offcanvas=""></a>
+<nav class="uk-navbar uk-navbar-attached">
+	<a href="#sidebar" data-uk-offcanvas="" class="uk-navbar-toggle"></a>
 </nav>
 <div id="sidebar" class="uk-offcanvas">
 	<div class="uk-offcanvas-bar">
