Fix schema, fix web

--- a/web/templates/train.html
+++ b/web/templates/train.html
@@ -10,6 +10,7 @@
             <input type="hidden" name="constructive" value="1" />
             <input type="submit" value="Good" />
         </form>
+        <a href="/train/">Neutral</a>
         <form action="" method="post">
             <input type="hidden" name="diffid" value="{{ diffid }}" />
             <input type="hidden" name="constructive" value="0" />
