--- a/web/templates/train.html
+++ b/web/templates/train.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>Training data entry</title>
+        <style>
+            td.diff-addedline{background:#ccffcc;font-size:smaller;border:solid 2px black}td.diff-deletedline{background:#ffffaa;font-size:smaller;border:dotted 2px black}
+            .diffchange{color:silver;font-weight:bold;text-decoration:underline}
+        </style>
     </head>
     <body>
         <div id="diff1"><table>{{ diff|safe }}</table></div>
