--- a/web/templates/train.html
+++ b/web/templates/train.html
@@ -3,7 +3,7 @@
         <title>Training data entry</title>
         <style>
             td.diff-addedline{background:#ccffcc;font-size:smaller;border:solid 2px black}td.diff-deletedline{background:#ffffaa;font-size:smaller;border:dotted 2px black}
-            .diffchange{color:silver;font-weight:bold;text-decoration:underline}
+            .diffchange{color:red;font-weight:bold;text-decoration:underline}
             #editsummary{font-size:30px;color:green}
         </style>
     </head>
