make login/register UI prettier

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,6 +4,7 @@
 		<script src="//static.csssuf.net/jquery.js"></script>
 		<script src="/static/js/uikit.min.js"></script>
 		<link rel="stylesheet" href="/static/css/uikit.min.css">
+		<link rel="stylesheet" href="/static/css/custom.css">
 		{% block head %}
 			<title>Base template - do not use</title>
 		{% endblock %}
