--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -4,20 +4,20 @@
 {% endblock %}
 {% block content %}
 <div class="uk-grid">
-	<div class="uk-width-1-2 uk-container-center">
-		<div class="uk-panel">
-			<h2 class="uk-panel-title">Register</h2>
-			<form class="uk-form" action="{{ url_for('register') }}" method="POST">
-				<fieldset>
+	<div class="containerc">
+		<div class="uk-width-1-3 uk-container-center">
+			<div class="uk-panel">
+				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Register</h2></div>
+				<form class="uk-form" action="{{ url_for('register') }}" method="POST">
 					<label for="username">Username: </label>
-					<input type="text" id="username" name="username" placeholder="Username"><br />
+					<input type="text" id="username" name="username" placeholder="Username"><br /><br />
 					<label for="email">Email address: </label>
-					<input type="text" id="email" name="email" placeholder="example@example.com"><br />
+					<input type="text" id="email" name="email" placeholder="example@example.com"><br /><br />
 					<label for="password">Password: </label>
-					<input type="password" id="password" name="password" placeholder="Password"><br />
+					<input type="password" id="password" name="password" placeholder="Password"><br /><br />
 					<button class="uk-button" value="submit">Register</button>
-				</fieldset>
-			</form>
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
