--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -6,7 +6,7 @@
 ] -%}
 {% set thispage = thispage | default('home') %}
 {% block navbar %}
-<nav class="uk-navbar uk-navbar-attached">
+<nav class="uk-navbar">
 	<a href="/" class="uk-navbar-brand">wedge</a>
 	<a href="#sidebar" data-uk-offcanvas class="uk-navbar-toggle"></a>
 </nav>
