require password confirmation

--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -15,6 +15,8 @@
 					<input type="text" id="email" name="email" placeholder="example@example.com"><br /><br />
 					<label for="password">Password: </label>
 					<input type="password" id="password" name="password" placeholder="Password"><br /><br />
+					<label for="password2">Confirm password: </label>
+					<input type="password" id="password2" name="password2" placeholder=""><br /><br />
 					<button class="uk-button" value="submit">Register</button>
 				</form>
 			</div>
