--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -8,14 +8,28 @@
 		<div class="uk-width-large-1-3 uk-container-center">
 			<div class="uk-panel">
 				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Login</h2></div>
-				<form class="uk-form" action="{{ url_for('login') }}" method="POST">
-					<label for="username">Username: </label>
-					<input type="text" id="username" name="username" placeholder="Username"><br /><br />
-					<label for="password">Password: </label>
-					<input type="password" id="password" name="password" placeholder="Password"><br /><br />
-					<button class="uk-button" value="submit">Log in</button>
+				<form class="uk-form uk-form-horizontal" action="{{ url_for('login') }}" method="POST">
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="username">Username: </label>
+						<div class="uk-form-controls">
+							<input class="uk-width-1-1" type="text" id="username" name="username" placeholder="Username">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password">Password: </label>
+						<div class="uk-form-controls">
+							<input class="uk-width-1-1" type="password" id="password" name="password" placeholder="Password">
+						</div>
+					</div>
+					<br />
+					<div class="uk-align-right">
+						<button class="uk-button" value="submit">Log in</button>
+					</div>
 				</form>
-				<p>Don't have an account? <a href="/register">Create one here!</a></p>
+				<br />
+				<div class="uk-align-center">
+					<p class="uk-align-center">Don't have an account? <a href="/register">Create one here!</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
