--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -8,16 +8,35 @@
 		<div class="uk-width-1-3 uk-container-center">
 			<div class="uk-panel">
 				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Register</h2></div>
-				<form class="uk-form" action="{{ url_for('register') }}" method="POST">
-					<label for="username">Username: </label>
-					<input type="text" id="username" name="username" placeholder="Username"><br /><br />
-					<label for="email">Email address: </label>
-					<input type="text" id="email" name="email" placeholder="example@example.com"><br /><br />
-					<label for="password">Password: </label>
-					<input type="password" id="password" name="password" placeholder="Password"><br /><br />
-					<label for="password2">Confirm password: </label>
-					<input type="password" id="password2" name="password2" placeholder=""><br /><br />
-					<button class="uk-button" value="submit">Register</button>
+				<form class="uk-form uk-form-horizontal" action="{{ url_for('register') }}" method="POST">
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="username">Username: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="text" id="username" name="username" placeholder="Username">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="email">Email address: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="text" id="email" name="email" placeholder="example@example.com">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password">Password: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="password" id="password" name="password" placeholder="Password">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password2">Confirm password: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="password" id="password2" name="password2" placeholder="">
+						</div>
+					</div>
+					<br />
+					<div class="uk-align-right">
+						<button class="uk-button" value="submit">Register</button>
+					</div>
 				</form>
 			</div>
 		</div>
