add shiny icons

--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -35,7 +35,7 @@
 					</div>
 					<br />
 					<div class="uk-align-right">
-						<button class="uk-button" value="submit">Register</button>
+						<button class="uk-button" value="submit"><i class="uk-icon-user"></i> Register</button>
 					</div>
 				</form>
 			</div>
