--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -23,7 +23,7 @@
 					</div>
 					<br />
 					<div class="uk-align-right">
-						<button class="uk-button" value="submit">Log in</button>
+						<button class="uk-button" value="submit"><i class="uk-icon-signin"></i> Log in</button>
 					</div>
 				</form>
 				<br />
