--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% set navbar = [
-	('/', 'home', 'Home'),
-	('/userinfo', 'userinfo', 'User Info'),
-	('/userstats', 'userstats', 'My Statistics')
+	('/', 'home', 'Home', 'home'),
+	('/userinfo', 'userinfo', 'User Info', 'gear'),
+	('/userstats', 'userstats', 'My Statistics', 'bar-chart'),
+	('/achievements', 'achievements', 'My Achievements', 'trophy')
 ] -%}
 {% set thispage = thispage | default('home') %}
 {% block navbar %}
@@ -21,8 +22,8 @@
 <div id="sidebar" class="uk-offcanvas">
 	<div class="uk-offcanvas-bar">
 		<ul class="uk-nav uk-nav-offcanvas" data-uk-nav>
-			{% for href, id, caption in navbar %}
-			<li{% if id == thispage %} class="uk-active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+			{% for href, id, caption, icn in navbar %}
+			<li{% if id == thispage %} class="uk-active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}   <i class="uk-icon-{{ icn|e }}"></i></a></li>
 			{% endfor %}
 		</ul>
 	</div>
