--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -8,7 +8,7 @@
 {% set thispage = thispage | default('home') %}
 {% block navbar %}
 <nav class="uk-navbar">
-	<a href="/" class="uk-navbar-brand">wedge</a>
+    <a href="/" class="uk-navbar-brand"><img src="/static/logo.png" style="height:21px;" /></a>
 	<a href="#sidebar" data-uk-offcanvas class="uk-navbar-toggle"></a>
 	<div class="uk-navbar-flip">
 		<ul class="uk-navbar-nav">
