add basic homepage

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,11 +3,24 @@
 <title>Hello, world!</title>
 {% endblock %}
 {% block content %}
-{% if session.username %}
-You're logged in!
-{% else %}
 <div class="uk-grid">
 	<div class="containerc">
+	{% if session.username %}
+		<div class="uk-width-large-1-3 uk-pull-1-3">
+			<div class="uk-panel uk-panel-box uk-panel-box-primary">
+				<div class="uk-panel-title">Welcome, {{ session.username }}!</div>
+				<hr />
+				<p>Welcome to wedge, the Wikipedia game.</p>
+			</div>
+		</div>
+		<div class="uk-width-large-1-3 uk-push-1-3">
+			<div class="uk-panel uk-panel-box uk-panel-box-primary">
+				<div class="uk-panel-title">{{ session.username }}'s stats at a glance:</div>
+				<hr />
+				<p>Stats should go here</p>
+			</div>
+		</div>
+	{% else %}
 		<div class="uk-width-large-1-2 uk-container-center">
 			<div class="uk-panel uk-panel-box uk-panel-box-primary">
 				<div class="uk-panel-title">What is wedge?</div>
@@ -22,7 +35,7 @@ You're logged in!
 				   users to be the most constructive!</p>
 			</div>
 		</div>
+	{% endif %}
 	</div>
 </div>
-{% endif %}
 {% endblock %}
