Verify, wikipedia username verification

--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -21,6 +21,12 @@
 							<input class="uk-width-1-1" type="text" id="email" name="email" placeholder="example@example.com">
 						</div>
 					</div>
+                    <div class="uk-form-row">
+                        <label class="uk-form-label" for="wp_username"><a href="/verify">Wikipedia username: </a></label>
+                        <div class="uk-form-controls ">
+                           <input class="uk-width-1-1" type="text" id="wp_username" name="wp_username" placeholder="Username">
+                        </div>
+                    </div>
 					<div class="uk-form-row">
 						<label class="uk-form-label" for="password">Password: </label>
 						<div class="uk-form-controls ">
