UI fixes (phrasing, verify scale)

--- a/web/templates/verify.html
+++ b/web/templates/verify.html
@@ -4,11 +4,15 @@
 {% endblock %}
 {% block content %}
 <div class="uk-grid">
-    <div class="uk-width-1-1">
-        <div class="containerc">
-            <p>To verify your username, please add this content to the wedge.js file in your userspace (if I had the Wikipedia username "Wedge", I would make it "User:Wedge/wedge.js"):</p>
-            <pre>wedge-verify (your wedge username)</pre>
-            <p>You should then be able to sign up.</p>
+    <div class="containerc">
+		<div class="uk-width-large-1-2 uk-container-center">
+			<div class="uk-panel uk-panel-box uk-panel-box-primary">
+				<div class="uk-panel-title">Wikipedia Account Verification Instructions</div>
+				<hr />
+				<p>To verify your username, please add this content to the wedge.js file in your userspace (if I had the Wikipedia username "Wedge", I would make it "User:Wedge/wedge.js"):</p>
+				<pre>wedge-verify (your wedge username)</pre>
+				<p>You should then be able to sign up.</p>
+			</div>
         </div>
     </div>
 </div>
