--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
 				<div class="uk-panel-title">{{ session.username }}'s stats at a glance:</div>
 				<hr />
 				<p>Your number of edits (that wedge knows of): {{ len(get_edits(session.uid)) }}</p>
-				<p>Total number of edits (that wedge knows of): {{ len(get_edits()) }}</p>
+				<p>Total number of edits (by wedge users): {{ len(get_edits()) }}</p>
 				<p>Your total score: {{ get_total_score(session.uid) }}</p>
 				<p>Your average score for a single edit: {{ get_avg_score(session.uid) }}</p>
 			</div>
