--- a/web/templates/verify.html
+++ b/web/templates/verify.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="uk-grid">
     <div class="containerc">
-		<div class="uk-width-large-1-2 uk-container-center">
+		<div class="uk-width-1-2 uk-container-center">
 			<div class="uk-panel uk-panel-box uk-panel-box-primary">
 				<div class="uk-panel-title">Wikipedia Account Verification Instructions</div>
 				<hr />
