--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="uk-grid">
 	<div class="containerc">
-		<div class="uk-width-large-1-3 uk-container-center">
+		<div class="uk-width-1-3 uk-container-center">
 			<div class="uk-panel">
 				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Login</h2></div>
 				<form class="uk-form uk-form-horizontal" action="{{ url_for('login') }}" method="POST">
