Prettify training interface and add it to navbar

--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -3,7 +3,8 @@
 	('/', 'home', 'Home', 'home'),
 	('/userinfo', 'userinfo', 'User Info', 'gear'),
 	('/userstats', 'userstats', 'My Statistics', 'bar-chart'),
-	('/achievements', 'achievements', 'My Achievements', 'trophy')
+	('/achievements', 'achievements', 'My Achievements', 'trophy'),
+    ('/train', 'train', 'Train the Classifier', 'eye-open')
 ] -%}
 {% set thispage = thispage | default('home') %}
 {% block navbar %}
