--- a/web/templates/verify.html
+++ b/web/templates/verify.html
@@ -3,8 +3,7 @@
 <title>Verify User</title>
 {% endblock %}
 {% block content %}
-<div class="uk-grid">
-    <div class="containerc">
+<div class="uk-grid containerc verifyc">
 		<div class="uk-width-1-2 uk-container-center">
 			<div class="uk-panel uk-panel-box uk-panel-box-primary">
 				<div class="uk-panel-title">Wikipedia Account Verification Instructions</div>
@@ -14,6 +13,5 @@
 				<p>You should then be able to sign up.</p>
 			</div>
         </div>
-    </div>
 </div>
 {% endblock %}
