--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -3,7 +3,15 @@
 	margin-right: auto;
 }
 .containerc {
+	padding-top: 1%;
+}
+.indexcenter {
 	padding-left: 10%;
 	padding-right: 10%;
-	padding-top: 1%;
+}
+.indexcenternologin {
+	padding-left: 35%;
+}
+.verifyc { 
+	padding-left: 35%;
 }
