achievements tweet link

--- a/web/templates/ach.html
+++ b/web/templates/ach.html
@@ -19,6 +19,7 @@
 <div class="uk-panel">
     <div class="uk-panel-badge"><span><i class="uk-icon-trophy"></i></span></div>
     <h3 class="uk-panel-title">{{ i }}</h3>
+    <a href="https://twitter.com/share?url=http%3A%2F%2Fwedge.csssuf.net%2Fachievements%2F%3Fusername%3D{{ name }}&text=I%20just%20got%20the%20achievement%20%22{{ i }}%22!">Tweet this achievement</a>
 </div>
 <hr />
 {% endfor %}
