--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -26,12 +26,13 @@
 			{% for href, id, caption, icn in navbar %}
 			<li{% if id == thispage %} class="uk-active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}   <i class="uk-icon-{{ icn|e }}"></i></a></li>
 			{% endfor %}
+			<!-- Disabling until this works
 			<li>
 				<form class="uk-search" uk-data-search="{source:'/getusers.json'}">
 					<input class="uk-search-field" type="search" placeholder="Search for users...">
 					<button class="uk-search-close" type="reset"></button>
 				</form>
-			</li>
+			</li>-->
 		</ul>
 	</div>
 </div>
