--- a/web/templates/userinfo.html
+++ b/web/templates/userinfo.html
@@ -1,9 +1,67 @@
 {% extends "navbar.html" %}
 {% block head %}
-<title>Doge - User Info</title>
+<title>User Info</title>
 {% endblock %}
 {% block content %}
-wow
-this user is cool
-that's his info
+<div class="uk-grid">
+	<div class="containerc">
+		<div class="uk-width-1-3 uk-container-center">
+			<div class="uk-panel">
+				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Change Information</h2></div>
+				<form class="uk-form uk-form-horizontal" action="/userinfo/" method="post">
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="username">Username: </label>
+						<div class="uk-form-controls ">
+                            <input disabled class="uk-width-1-1" type="text" id="username" name="username" value="{{ username }}" />
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="email">Email address: </label>
+						<div class="uk-form-controls ">
+                            <input class="uk-width-1-1" type="text" id="email" name="email" value="{{ email }}" />
+						</div>
+					</div>
+                    <div class="uk-form-row">
+                        <label class="uk-form-label" for="wp_username"><a href="/verify">Wikipedia username: </a></label>
+                        <div class="uk-form-controls ">
+                            <input disabled class="uk-width-1-1" type="text" id="wp_username" name="wp_username" value="{{ wp_username }}" />
+                        </div>
+                    </div>
+                    <br />
+					<div class="uk-align-right">
+						<button class="uk-button" value="submit"><i class="uk-icon-pencil"></i> Change</button>
+					</div>
+
+				</form>
+			</div>
+            <div class="uk-panel">
+				<div class="uk-panel uk-panel-header"><h2 class="uk-panel-title">Change Password</h2></div>
+				<form class="uk-form uk-form-horizontal" action="/userinfo/" method="post">
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password">Old Password: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="password" id="oldpassword" name="oldpassword">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password">New Password: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="password" id="newpassword" name="newpassword">
+						</div>
+					</div>
+					<div class="uk-form-row">
+						<label class="uk-form-label" for="password2">Confirm New Password: </label>
+						<div class="uk-form-controls ">
+							<input class="uk-width-1-1" type="password" id="password2" name="password2">
+						</div>
+					</div>
+					<br />
+					<div class="uk-align-right">
+						<button class="uk-button" value="submit"><i class="uk-icon-lock"></i> Change</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
