--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,6 +5,7 @@
 		<script src="/static/js/uikit.min.js"></script>
 		<link rel="stylesheet" href="/static/css/uikit.min.css">
 		<link rel="stylesheet" href="/static/css/custom.css">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
 		{% block head %}
 			<title>Base template - do not use</title>
 		{% endblock %}
