--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,7 +3,7 @@
 <title>Hello, world!</title>
 {% endblock %}
 {% block content %}
-<div class="uk-grid containerc indexcenter{% if session.username %}{% else %}nologin{% endif %}">
+<div class="uk-grid containerc uk-container-center">
 	{% if session.username %}
 		<div class="uk-width-medium-1-2">
 			<div class="uk-panel uk-panel-box uk-panel-box-primary">
