--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -4,6 +4,7 @@
 	('/userinfo', 'userinfo', 'User Info', 'gear'),
 	('/userstats', 'userstats', 'My Statistics', 'bar-chart'),
 	('/achievements', 'achievements', 'My Achievements', 'trophy'),
+	('/leaderboard', 'leaderboard', 'Top 25 Leaderboard', 'star'),
     ('/train', 'train', 'Train the Classifier', 'eye-open')
 ] -%}
 {% set thispage = thispage | default('home') %}
