--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -53,7 +53,7 @@
 			{% for i in lb %}
 				<tr>
 					<td>{{ i[0] }}</td>
-					<td>{{ i[1] }}</td>
+					<td>{{ round(i[1], 1) }}</td>
 				</tr>
 			{% endfor %}
 			</tbody>
