sneaky bastard typo

--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -57,7 +57,7 @@
 				</div>
 				<br />
 				<div class="uk-align-right">
-					<button class="uk-button" value="sumbit"><i class="uk-icon-signin"></i> Log in</button>
+					<button class="uk-button" value="submit"><i class="uk-icon-signin"></i> Log in</button>
 				</div>
 			</form>
 			<br />
