change text fields to email fields

--- a/web/templates/userinfo.html
+++ b/web/templates/userinfo.html
@@ -18,7 +18,7 @@
 					<div class="uk-form-row">
 						<label class="uk-form-label" for="email">Email address: </label>
 						<div class="uk-form-controls ">
-                            <input class="uk-width-1-1" type="text" id="email" name="email" value="{{ email }}" />
+                            <input class="uk-width-1-1" type="email" id="email" name="email" value="{{ email }}" />
 						</div>
 					</div>
                     <div class="uk-form-row">
