--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -18,7 +18,7 @@
 					<div class="uk-form-row">
 						<label class="uk-form-label" for="email">Email address: </label>
 						<div class="uk-form-controls ">
-							<input class="uk-width-1-1" type="text" id="email" name="email" placeholder="example@example.com">
+							<input class="uk-width-1-1" type="email" id="email" name="email" placeholder="example@example.com">
 						</div>
 					</div>
                     <div class="uk-form-row">
