--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -4,7 +4,7 @@
 	('/userinfo', 'userinfo', 'User Info', 'gear'),
 	('/userstats', 'userstats', 'My Statistics', 'bar-chart'),
 	('/achievements', 'achievements', 'My Achievements', 'trophy'),
-    ('/achievement_list', 'achievement_list', 'List of Achievements', 'reorder'),
+    ('/achievement_list', 'achievement_list', 'List of Achievements', 'tasklist'),
 	('/leaderboard', 'leaderboard', 'Top 25 Leaderboard', 'star'),
     ('/train', 'train', 'Train the Classifier', 'eye-open')
 ] -%}
