--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<script src="//static.csssuf.net/jquery.js"></script>
-		<script src="/static/js/uikit.gradient.min.js"></script>
-		<link rel="stylesheet" href="/static/css/uikit.min.css">
+		<script src="/static/js/uikit.min.js"></script>
+		<link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
 		<link rel="stylesheet" href="/static/css/custom.css">
         <meta name="viewport" content="width=device-width, user-scalable=no">
 		{% block head %}
