--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -26,7 +26,14 @@
 	<div class="uk-offcanvas-bar">
 		<ul class="uk-nav uk-nav-offcanvas" data-uk-nav>
 			{% for href, id, caption, icn in navbar %}
-			<li{% if id == thispage %} class="uk-active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}   <i class="uk-icon-{{ icn|e }}"></i></a></li>
+			<li{% if id == thispage %} class="uk-active"{% endif %}>
+                <a href="{{ href|e }}">
+                    <div class='uk-grid'>
+                        <div class='uk-width-5-6'>{{ caption|e }}</div>
+                        <div class='uk-width-1-6'><i class="uk-icon-{{ icn|e }}"></i></div>
+                    </div>
+                </a>
+            </li>
 			{% endfor %}
 			<!-- Disabling until this works
 			<li>
