--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="//static.csssuf.net/jquery.js"></script>
 		<script src="/static/js/uikit.min.js"></script>
-		<link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
+		<link rel="stylesheet" href="/static/css/uikit.almostflat.min.css">
 		<link rel="stylesheet" href="/static/css/custom.css">
         <meta name="viewport" content="width=device-width, user-scalable=no">
 		{% block head %}
