Add alt text to logo

--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -11,7 +11,7 @@
 {% set thispage = thispage | default('home') %}
 {% block navbar %}
 <nav class="uk-navbar">
-    <a href="/" class="uk-navbar-brand"><img src="/static/logo.png" style="height:21px;" /></a>
+    <a href="/" class="uk-navbar-brand"><img src="/static/logo.png" style="height:21px;" alt="logo"/></a>
 	<a href="#sidebar" data-uk-offcanvas class="uk-navbar-toggle"></a>
 	<div class="uk-navbar-flip">
 		<ul class="uk-navbar-nav uk-navbar-attached">
