--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -35,13 +35,17 @@
                 </a>
             </li>
 			{% endfor %}
-			<!-- Disabling until this works
+			Disabling until this works
 			<li>
-				<form class="uk-search" uk-data-search="{source:'/getusers.json'}">
-					<input class="uk-search-field" type="search" placeholder="Search for users...">
-					<button class="uk-search-close" type="reset"></button>
-				</form>
-			</li>-->
+				<div id="searchid" class="uk-offcanvas">
+					<div id="uk-offcanvas-bar">
+						<form class="uk-search" uk-data-search="{source:'/getusers.json'}">
+							<input class="uk-search-field" type="search" placeholder="Search for users...">
+							<button class="uk-search-close" type="reset"></button>
+						</form>
+					</div>
+				</div>
+			</li>
 		</ul>
 	</div>
 </div>
