--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -26,7 +26,7 @@
 	<div class="uk-offcanvas-bar">
 		<ul class="uk-nav uk-nav-offcanvas" data-uk-nav>
 			{% for href, id, caption, icn in navbar %}
-			<li{% if id == thispage %} class="uk-active"{% endif %}>
+			<li{% if id == thispage %} class="uk-active"{% endif %} data-uk-offcanvas="{target:'#sidebar'}">
                 <a href="{{ href|e }}">
                     <div class='uk-grid'>
                         <div class='uk-width-5-6'>{{ caption|e }}</div>
