Put username in navbar

--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -15,7 +15,9 @@
 	<a href="#sidebar" data-uk-offcanvas class="uk-navbar-toggle"></a>
 	<div class="uk-navbar-flip">
 		<ul class="uk-navbar-nav uk-navbar-attached">
-				{% if session.uid %}<li><a href="/logout">Log out</a></li>
+				{% if session.uid %}
+                    <li><a>{{ session.username }}</a></li>
+                    <li><a href="/logout">Log out</a></li>
 				{% else %}<li><a href="#loginmodal" data-uk-modal>Log in</a></li>
 				<li><a href="/register">Create account</a></li>
 				{% endif %}
