--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,8 +18,8 @@
 				<hr />
 				<p>Your number of edits (that wedge knows of): {{ len(get_edits(session.uid)) }}</p>
 				<p>Total number of edits (by wedge users): {{ len(get_edits()) }}</p>
-				<p>Your total score: {{ get_total_score(session.uid) }}</p>
-				<p>Your average score for a single edit: {{ get_avg_score(session.uid) }}</p>
+				<p>Your total score: {{ round(get_total_score(session.uid), 1) }}</p>
+				<p>Your average score for a single edit: {{ round(get_avg_score(session.uid), 1) }}</p>
 			</div>
 		</div>
 	{% else %}
